fix(ui): align images with text

--- a/frontend/theme/extras/main.less
+++ b/frontend/theme/extras/main.less
@@ -33,7 +33,6 @@ body {
 body:not(.contenttype-lrf) {
   #page-document.ui.container .content-container,
   #page-document.ui.container .events-container .events-content{
-    & > .break-block,
     & > ul {
       max-width: 744px !important;
     }
